Issue #3 Avanzamento implementazione.